vectorize long register move chains in the codegen commit
Move chains of eight or more int-typed moves (shift registers, delay
pipelines) now keep their registers in a shared chain array and commit
as overlapping 8-lane Vector API moves instead of scalar field-to-field
copies, which profiling showed to be ~38% of large-design cycle time.
All lanes load before any lane stores, preserving the same
read-before-overwrite guarantee the consumer-first commit order gives
the scalar form. Chain registers are read by constant index everywhere
else; all remaining state stays in width-typed fields, which measure
faster for compute than array-backed state.

The vector path engages only when the host JVM resolves
jdk.incubator.vector (JPMS forbids resolving a boot-loader incubator
module into a running JVM, so it must be a launch flag); otherwise the
commit silently stays scalar. The repo .jvmopts adds the flag so sbt
server sims vectorize out of the box. New sysprops:
-Ddfhdl.sim.codegen.dumpSource=true prints the generated kernel Java,
-Ddfhdl.sim.codegen.noVector=true forces the scalar commit.

SHAFarm throughput (forked JDK 25, bit-identical aggregates): n=32
2.82 -> 3.79 Mcycles/s, n=64 1.33 -> 1.68 - ahead of single-threaded
Verilator at both sizes (2.52 / 1.50).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>